--- a/index.html
+++ b/index.html
@@ -22,10 +22,458 @@
       crossorigin="anonymous"
     ></script>
     <!-- JavaScript-link-end -->
+
+    <!-- owl carousel -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css"
+    />
+    <!-- owl carousel -->
   </head>
+
   <body>
+    <!-- nav-section-start -->
     <section id="navegation">
-      <nav></nav>
+      <nav class="navbar navbar-expand-xl navbar-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"
+            ><img
+              src="./assets/img/cropped-cropped-cis-logo-1-11.png"
+              style="width: 250px"
+              alt=""
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#mynavbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="mynavbar">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#">HOME</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  >WHO WE ARE</a
+                >
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">About us</a></li>
+                  <li><a class="dropdown-item" href="#">Our History</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Mission and Vision</a>
+                  </li>
+                  <li><a class="dropdown-item" href="#">Governing Board</a></li>
+                  <li><a class="dropdown-item" href="#">Partner</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  >WHAT WE DO</a
+                >
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">We Work For</a></li>
+                  <li><a class="dropdown-item" href="#">Working Area</a></li>
+                  <li><a class="dropdown-item" href="#">Our Approach</a></li>
+                  <li><a class="dropdown-item" href="#">Activities</a></li>
+                </ul>
+              </li>
+
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  >PROJECT</a
+                >
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="#">Project Archived</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Current Project </a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Sisuation Report</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">A-PAD BANGLADESH</a>
+              </li>
+
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  >MEDIA CENTER</a
+                >
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Prees Realesh</a></li>
+                  <li><a class="dropdown-item" href="#">News Letters </a></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Leaflet-Brochure</a>
+                  </li>
+                  <li><a class="dropdown-item" href="#">Stories</a></li>
+                  <li><a class="dropdown-item" href="#">Publication </a></li>
+                  <li><a class="dropdown-item" href="#">Media Coverage</a></li>
+                  <li><a class="dropdown-item" href="#">Photo Gallery</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  >COVID-19</a
+                >
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="#">COVID-19 Leaflet</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Covid-19 Photos </a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Covid-19 Reports</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Covid-19 Case Study</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  >EVENTS</a
+                >
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Events</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Upcoming Events </a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">CONTACT US</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  >CAREER</a
+                >
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="#">Drop Your Resume</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      >Vacancy <br />Announcements
+                    </a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </section>
+    <!-- nav-section-end -->
+    <!-- hero section start -->
+    <section id="hero"></section>
+    <div id="demo" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="./assets/img/hero-img/chicago.jpg"
+            alt="Los Angeles"
+            class="d-block"
+            style="width: 100%"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="./assets/img/hero-img/la (1).jpg"
+            alt="Chicago"
+            class="d-block"
+            style="width: 100%"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="./assets/img/hero-img/ny.jpg "
+            alt="New York"
+            class="d-block"
+            style="width: 100%"
+          />
+        </div>
+      </div>
+
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#demo"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#demo"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon"></span>
+      </button>
+    </div>
+    <!-- hero section end -->
+
+    <!-- about-section- start -->
+    <section id="about-us">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="about">
+              <h1 class="about-header">ABOUT US</h1>
+              <p class="mt-3">
+                Community Initiative Society (CIS) is a non-governmental,
+                community-based, self financed, International Humanitarian
+                organization. The organization formed in 2014. CIS is registered
+                with Joint Stock Company and NGO Affairs Bureau of Bangladesh.
+                Since inception, CIS is supporting human rights, social
+                empowerment, disaster preparedness, mitigation, disaster risk
+                reduction, climate change, health risk management, capacity
+                building, and relief activities that reduce the impact of
+                disasters upon countries and communities for the low income
+                underprivileged people. CIS is a partner of Asia Pacific
+                Alliance for Disaster Management (A-PAD) and Asian Disaster
+                Reduction & Response Network (ADRRN).
+              </p>
+              <a href="" class="btn btn-danger mt-5">Read More</a>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="about-video">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/_iSbUWmauIs?si=6OgT6C8RhJJc16Pa"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+              <a href="" class="btn btn-danger mt-2">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- about-section-end -->
+    <!-- vision-section-start -->
+    <section id="vision">
+      <div class="vision-header">
+        <h1>VISION</h1>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-1"></div>
+          <div class="col-sm-5">
+            <div class="vision-text">
+              <ul>
+                <li>
+                  In alliance with the communities and other stakeholders,
+                  develop networks to appropriately coordinate disaster risk
+                  reduction and management.
+                </li>
+                <li>
+                  Develop and enhance sustainable disaster risk management
+                  capacities and mechanisms.
+                </li>
+                <li>
+                  Raising awareness and exchange of information of disaster risk
+                  management expertise and experience.
+                </li>
+                <li>
+                  Skills & development training for building safer communities.
+                </li>
+                <li>
+                  Respond to emergency situations including humanitarian crisis.
+                </li>
+                <li>
+                  Tackle impacts of climate change and develop resilience among
+                  vulnerable groups
+                </li>
+                <li>
+                  Develop knowledge and capacity through effective research and
+                  innovation to support our broader agenda.
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="vision-cis-img">
+              <img src="./assets/img/missionc-4-01-low-resulation.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- vision-section-end -->
+    <!-- mission-section-start -->
+    <section id="mission">
+      <div class="mission-header">
+        <h1>MISSION</h1>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-1"></div>
+          <div class="col-sm-7">
+            <div class="mission-safar-img">
+              <img src="./assets/img/vision-c2-768x232.png" alt="" />
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="mission-text">
+              <p>
+                Build a safer community by reducing the risk of a natural
+                disasters and human induced hazards by developing efficient
+                response management systems, providing humanitarian support,
+                tackling climate change, providing healthcare to the undertaking
+                research and innovation programs.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- mission-section-end -->
+
+    <!-- activities-section-start -->
+    <section id="activities">
+      <div class="activity"></div>
+    </section>
+    <!-- activities-section-end -->
+
+    <!-- testimonial -->
+    <section id="activities">
+      <div class="container">
+        <div class="row">
+          <div class="activities-header">
+            <h1>ACTIVITIES</h1>
+          </div>
+        </div>
+
+        <div class="row">
+          <div id="slider" class="owl-carousel">
+            <div class="content-area">
+              <div class="content">
+                <div class="img-area">
+                  <img
+                    src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg"
+                    alt=""
+                  />
+                  <h4>Jhon Doe</h4>
+                </div>
+              </div>
+            </div>
+            <div class="content-area">
+              <div class="content">
+                <div class="img-area">
+                  <img
+                    src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg"
+                    alt=""
+                  />
+
+                  <h4>Jhon Doe</h4>
+                </div>
+              </div>
+            </div>
+            <div class="content-area">
+              <div class="content">
+                <div class="img-area">
+                  <img
+                    src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg"
+                    alt=""
+                  />
+
+                  <h4>Jhon Doe</h4>
+                </div>
+              </div>
+            </div>
+            <div class="content-area">
+              <div class="content">
+                <div class="img-area">
+                  <img
+                    src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg"
+                    alt=""
+                  />
+
+                  <h4>Jhon Doe</h4>
+                </div>
+              </div>
+            </div>
+            <div class="content-area">
+              <div class="content">
+                <div class="img-area">
+                  <img
+                    src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg"
+                    alt=""
+                  />
+
+                  <h4>Jhon Doe</h4>
+                </div>
+              </div>
+            </div>
+            <div class="content-area">
+              <div class="content">
+                <div class="img-area">
+                  <img
+                    src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg"
+                    alt=""
+                  />
+
+                  <h4>Jhon Doe</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- testimonial -->
+
+    <!-- script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="./assets/javascrip/script.js"></script>
   </body>
 </html>
