--- a/index.html
+++ b/index.html
@@ -381,21 +381,17 @@
   </section>
   <!-- testimonial -->
 
-  <!-- script -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-  <script src="./assets/javascrip/script.js"></script>
-  <!-- script -->
   <!-- activities-section-end -->
   <!-- working-and-story-section-start -->
-  <div id="workandstory">
+
+  <section id="workandstory">
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
           <div class="work">
-            <div class="work-header">
+            <div class="work-header ">
               <h1>WORKING AREA</h1>
-              <div class="work-map">
+              <div class="work-map ">
                 <img src="./assets/img/CIS-All-District-Working-Area-map-update.png" alt="">
               </div>
             </div>
@@ -404,21 +400,109 @@
         <!-- not-finish  -->
         <div class="col-sm-6">
           <div class="story">
-            <div class="story-header">
-              <h1>STORY</h1>
+
+            <div class="container ">
+              <div class="row">
+                <div class="story-header">
+                  <h1>STORY</h1>
+                </div>
+              </div>
+
+              <div class="row mt-5">
+                <div id="slider1" class="owl-carousel">
+                  <div class="story-area">
+                    <div class="news">
+                      <div class="newspaper">
+                        <img src="./assets/img/creative-of-daily-newspaper-vector-21311659.webp" alt="">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="story-area">
+                    <div class="news">
+                      <div class="newspaper">
+                        <img src="./assets/img/creative-of-daily-newspaper-vector-21311659.webp" alt="">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="story-area">
+                    <div class="news">
+                      <div class="newspaper">
+                        <img src="./assets/img/creative-of-daily-newspaper-vector-21311659.webp" alt="">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="story-area">
+                    <div class="news">
+                      <div class="newspaper">
+                        <img src="./assets/img/creative-of-daily-newspaper-vector-21311659.webp" alt="">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="story-area">
+                    <div class="news">
+                      <div class="newspaper">
+                        <img src="./assets/img/creative-of-daily-newspaper-vector-21311659.webp" alt="">
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
             </div>
-           
           </div>
         </div>
-           <!-- not-finish  -->
       </div>
     </div>
-  </div>
+  </section>
+
   <!-- working-and-story-section-end -->
   <!-- impacts-section-start -->
+  <section id="impacts">
+    <div class="impact-header">
+      <h1>IMPACTS</h1>
+    </div>
+    <div class="impact-main-area">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-3">
+            <div class="impact-item">
+              <h1>10+</h1>
+              <h2>YEARS</h2>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="impact-item">
+              <h1>150+</h1>
+              <h2>AREA</h2>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="impact-item">
+              <h1>100+</h1>
+              <h2>PROJECT</h2>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="impact-item">
+              <h1>1,000K+</h1>
+              <h2>PEOPLES</h2>
+             
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
 
   <!-- impacts-section-end -->
-  
+
+
+  <!-- script -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+  <script src="./assets/js/script.js"></script>
+  <!-- script -->
 </body>
 
 </html>
