--- a/index.html
+++ b/index.html
@@ -612,17 +612,17 @@
             <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#emergency"> EMERGENCY</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#menu2">DISASTER DRILLING
+            <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#disaster">DISASTER DRILLING
               PROGRAM</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#menu2">TRAINING WORKSHOP</a>
+            <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#training">TRAINING WORKSHOP</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#menu2">AWERNESS PROGRAM</a>
+            <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#awerness">AWERNESS PROGRAM</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#menu2">COVID-19 ACTIVITY</a>
+            <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#covid">COVID-19 ACTIVITY</a>
           </li>
         </ul>
 
@@ -679,17 +679,17 @@
               </div>
             </div>
           </div>
-        
 
-          </div>
-          <!-- gallary-others -->
-          <div id="events" class="container tab-pane fade"><br>
-          <div id="emergency" class="container tab-pane fade"><br></div>
-          <div id="menu2" class="container tab-pane fade"><br></div>
-          <div id="menu2" class="container tab-pane fade"><br></div>
-          <div id="menu2" class="container tab-pane fade"><br></div>
-          <div id="menu2" class="container tab-pane fade"><br></div>
-          <!-- gallary-others -->
+              <!-- gallary-others -->
+              <div id="events" class="container tab-pane fade"><br>das</div>
+                <div id="emergency" class="container tab-pane fade"><br>ada</div>
+                <div id="disaster" class="container tab-pane fade"><br>dsada</div>
+                <div id="training" class="container tab-pane fade"><br>dsas</div>
+                <div id="awerness" class="container tab-pane fade"><br>dsa</div>
+                <div id="covid" class="container tab-pane fade"><br>adsa</div>
+                <!-- gallary-others -->
+        </div>
+           
 
           <div class="gallary-button">
             <a href="#">Load More</a>
@@ -743,24 +743,141 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-3 ">
+        <div class="col-sm-2 ">
           <div class="useful">
             <div class="useful-header">
               <h1>Useful Links</h1>
             </div>
             <div class="underline"></div>
             <div class="links">
-              <a href="#">home</a>
+              <a href="#">Home</a>
+              <a href="#">About Us</a>
+              <a href="#">Mission & Vision</a>
+              <a href="#">Covid-19</a>
+              <a href="#">Events</a>
+              <a href="#">Contact Us</a>
             </div>
           </div>
         </div>
-        <div class="col-sm-3 bg-primary"></div>
-        <div class="col-sm-3 bg-danger"></div>
+        <div class="col-sm-3 ">
+          <div class="latest">
+            <div class="latest-header">
+              <h1>Latest News</h1>
+            </div>
+            <div class="underline"></div>
+            <div class="row mt-3">
+              <div class="col-sm-6">
+                <div class="updeat-img">
+                  <img src="./assets/img/fotter/07-1024x768.jpeg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="updeat-text">
+                  <a href="#"> "A-PAD Award 2023" to Mr. Saber Hossain Chowdhury MP, Group Director, Karnaphuli
+                    Group</a>
+                </div>
+              </div>
+            </div>
+            <div class="row mt-2">
+              <div class="col-sm-6">
+                <div class="updeat-img">
+                  <img src="./assets/img/fotter/3.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="updeat-text">
+                  <a href="#"> 250 food packs for the Forcibly Displaced People from Myanmar (FDMNs) at Camp-15 Jamtoli
+                    CPHC center</a>
+                </div>
+              </div>
+            </div>
+            <div class="row mt-2">
+              <div class="col-sm-6">
+                <div class="updeat-img">
+                  <img src="./assets/img/fotter/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="updeat-text">
+                  <a href="#">CIS paid a courtesy visit to welcome the newly appointed Honorable Ambassador Mr. Iwama
+                    Kiminori at the Embassy of Japan in Bangladesh</a>
+                </div>
+              </div>
+            </div>
+            <div class="row mt-2">
+              <div class="col-sm-6">
+                <div class="updeat-img">
+                  <img src="./assets/img/fotter/Saber-Hossain.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="updeat-text">
+                  <a href="#">Disaster Preparedness Day 2023</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-4 ">
+          <div class="contact">
+            <div class="contact-header">
+              <h1>Contact</h1>
+            </div>
+            <div class="underline"></div>
+            <div class="phone">
+              <div class="call">
+                <i class="fa-solid fa-phone" style="color: #ffffff;"></i>
+              </div>
+              <div class="namber">
+                <a href="#">+88 02-41031190</a>
+              </div>
+            </div>
+
+            <div class="gmail">
+              <div class="mail">
+                <i class="fa-solid fa-envelope" style="color: #ffffff;"></i>
+              </div>
+              <div class="cis-mail">
+                <a href="#">info@cis-bd.org</a>
+              </div>
+            </div>
+
+            <div class="area">
+              <div class="area-icon">
+                <i class="fa-solid fa-magnifying-glass-location" style="color: #ffffff;"></i>
+              </div>
+              <div class="area-name">
+                <a href="#">190/1 Boro Moghbazar,
+                  Wireless Railgate,
+                  Dhaka- 1217, Bangladesh</a>
+              </div>
+            </div>
+            <div class="subscribe">
+              <h1>Subscribe Now</h1>
+            </div>
+<div class="for">
+  <p>Don’t miss our future updates! Get Subscribed Today!</p>
+</div>
+<div class="login">
+  <input type="email" id="email" placeholder="Your mail here">
+  <label for="email"><i class="fa-solid fa-envelope" style="color: #ffffff;"></i></label>
+</div>
+
+
+
+          </div>
+        </div>
       </div>
     </div>
-
   </section>
   <!-- fotter-section-end -->
+  <!-- copyright-section-start -->
+  <section id="copyright">
+    <div class="copy" > <p>Copyright © 2023 Community Initiative Society (CIS) | All Rights Receivers </p></div>
+  </section>
+ 
+  <!-- copyright-section-end -->
 
   <!-- script -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
