--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <li class="nav-item dropdown">
               <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">WHO WE ARE</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">About us</a></li>
-                <li><a class="dropdown-item" href="#">Our History</a></li>
+                <li><a class="dropdown-item" href="./about.html">About us</a></li>
+                <li><a class="dropdown-item" href="./history.html">Our History</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">Mission and Vision</a>
+                  <a class="dropdown-item" href="./mission&vision.html">Mission and Vision</a>
                 </li>
-                <li><a class="dropdown-item" href="#">Governing Board</a></li>
-                <li><a class="dropdown-item" href="#">Partner</a></li>
+                <li><a class="dropdown-item" href="./governing board.html">Governing Board</a></li>
+                <li><a class="dropdown-item" href="./Partners.html">Partner</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -599,29 +599,33 @@
   <!-- photo-gallery-section-start -->
   <section id="photo-gallery">
     <div class="gallery">
-      <div class="container">
-        <!-- Nav tabs -->
+      <div class="gallery-header">
+        <h1>PHOTO GALLERY
+        </h1>
+      </div>
+      <div class="container mt-5">
+        <!-- Nav tabs --> 
         <ul class="nav nav-tabs" role="tablist">
-          <li class="nav-item">
+          <li class="nav-item mt-2">
             <a class="nav-link active bg-dark" data-bs-toggle="tab" href="#all">ALL</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item mt-2">
             <a class="nav-link text-white" style="background-color: red;" data-bs-toggle="tab" href="#events">EVENTS</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item mt-2">
             <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#emergency"> EMERGENCY</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item mt-2">
             <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#disaster">DISASTER DRILLING
               PROGRAM</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item mt-2">
             <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#training">TRAINING WORKSHOP</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item mt-2">
             <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#awerness">AWERNESS PROGRAM</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item mt-2">
             <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#covid">COVID-19 ACTIVITY</a>
           </li>
         </ul>
