--- a/history.html
+++ b/history.html
@@ -44,7 +44,7 @@
                 <div class="collapse navbar-collapse" id="mynavbar">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">HOME</a>
+                            <a class="nav-link" href="./index.html">HOME</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">WHO WE ARE</a>
@@ -148,6 +148,31 @@
     </section>
     <!-- nav-section-end -->
 
+
+    <!-- history-hero-section-start -->
+    <section id="history-main-hero">
+        <div class="history-hero">
+            <h1>OUR <span style="color: red;">   HISTORY </span></h1>
+        </div>
+    </section>
+   
+    <!-- history-hero-section-end -->
+    <!-- history-us-section-start -->
+    <section id="nav-our-history">
+        <div class="container">
+            <div class="nav-history">
+                <div class="nav-history-header">
+                    <h1>OUR HISTORY</h1>
+                    <p>Community Initiative Society (CIS) was founded in 2014. Since inception, CIS has been providing support to strength social empowerment, disaster preparedness and mitigation, disaster risk reduction, healthcare, capacity development, aid activities, and developing resilience to climate change to reduce the impact of disasters upon the underprivileged communities across Bangladesh.
+
+                    </p>
+                    <p>Our program are consistent with the provision of the Constitution of Bangladesh, as well as Perspective Plan 2011-2021: Making Vision 2021 a Reality; the National Integrity Strategy (2012); the Seventh Five Year Plan (2016-2020); and the Sustainable Development Agenda 2030. We consider ourselves a partner of the Government of Bangladesh and other stockholders working to reduce poverty, building sustainable communities for the marginalized, and engaging in multi-stockholder partnerships towards achieving the SDG goals.</p>
+            
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- history-us-section-end -->
 
 
 
