--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
         </h1>
       </div>
       <div class="container mt-5">
-        <!-- Nav tabs --> 
+        <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
           <li class="nav-item mt-2">
             <a class="nav-link active bg-dark" data-bs-toggle="tab" href="#all">ALL</a>
@@ -620,10 +620,12 @@
               PROGRAM</a>
           </li>
           <li class="nav-item mt-2">
-            <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#training">TRAINING WORKSHOP</a>
+            <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#training">TRAINING
+              WORKSHOP</a>
           </li>
           <li class="nav-item mt-2">
-            <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#awerness">AWERNESS PROGRAM</a>
+            <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#awerness">AWERNESS
+              PROGRAM</a>
           </li>
           <li class="nav-item mt-2">
             <a class="nav-link" style="background-color: red;" data-bs-toggle="tab" href="#covid">COVID-19 ACTIVITY</a>
@@ -684,22 +686,22 @@
             </div>
           </div>
 
-              <!-- gallary-others -->
-              <div id="events" class="container tab-pane fade"><br>das</div>
-                <div id="emergency" class="container tab-pane fade"><br>ada</div>
-                <div id="disaster" class="container tab-pane fade"><br>dsada</div>
-                <div id="training" class="container tab-pane fade"><br>dsas</div>
-                <div id="awerness" class="container tab-pane fade"><br>dsa</div>
-                <div id="covid" class="container tab-pane fade"><br>adsa</div>
-                <!-- gallary-others -->
+          <!-- gallary-others -->
+          <div id="events" class="container tab-pane fade"><br>das</div>
+          <div id="emergency" class="container tab-pane fade"><br>ada</div>
+          <div id="disaster" class="container tab-pane fade"><br>dsada</div>
+          <div id="training" class="container tab-pane fade"><br>dsas</div>
+          <div id="awerness" class="container tab-pane fade"><br>dsa</div>
+          <div id="covid" class="container tab-pane fade"><br>adsa</div>
+          <!-- gallary-others -->
         </div>
-           
 
-          <div class="gallary-button">
-            <a href="#">Load More</a>
-          </div>
+
+        <div class="gallary-button">
+          <a href="#">Load More</a>
         </div>
       </div>
+    </div>
     </div>
   </section>
   <!-- photo-gallery-section-end -->
@@ -860,16 +862,13 @@
             <div class="subscribe">
               <h1>Subscribe Now</h1>
             </div>
-<div class="for">
-  <p>Don’t miss our future updates! Get Subscribed Today!</p>
-</div>
-<div class="login">
-  <input type="email" id="email" placeholder="Your mail here">
-  <label for="email"><i class="fa-solid fa-envelope" style="color: #ffffff;"></i></label>
-</div>
-
-
-
+            <div class="for">
+              <p>Don’t miss our future updates! Get Subscribed Today!</p>
+            </div>
+            <div class="login">
+              <input type="email" id="email" placeholder="Your mail here">
+              <label for="email"><i class="fa-solid fa-envelope" style="color: #ffffff;"></i></label>
+            </div>
           </div>
         </div>
       </div>
@@ -878,9 +877,11 @@
   <!-- fotter-section-end -->
   <!-- copyright-section-start -->
   <section id="copyright">
-    <div class="copy" > <p>Copyright © 2023 Community Initiative Society (CIS) | All Rights Receivers </p></div>
+    <div class="copy">
+      <p>Copyright © 2023 Community Initiative Society (CIS) | All Rights Receivers </p>
+    </div>
   </section>
- 
+
   <!-- copyright-section-end -->
 
   <!-- script -->
