--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                 <div class="collapse navbar-collapse" id="mynavbar">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">HOME</a>
+                            <a class="nav-link" href="./index.html">HOME</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">WHO WE ARE</a>
@@ -148,6 +148,28 @@
         </nav>
     </section>
     <!-- nav-section-end -->
+    <!-- about-hero-section-start -->
+    <section id="about-us-hero">
+            <div class="about-hero">
+                <h1>ABOUT <span style="color: red;"> US </span></h1>
+            </div>
+    </section>
+
+    <!-- about-hero-section-end  -->
+    <!-- about-us-section-start -->
+    <section id="nav-about-us">
+        <div class="container">
+            <div class="nav-about">
+                <div class="nav-about-header">
+                    <h1>ABOUT US</h1>
+                    <p>Community Initiative Society (CIS) is a non-government, community focused, self financed, international humanitarian organization engaged with emergency response and management, humanitarian support, tackling climate change, providing healthcare to the underprivileged, and undertaking research and innovation, for making communities safer and sustainable.</p>
+                    <p>Commencing operations in 2014, we have been supporting vulnerable communities across Bangladesh with an objective to implement integrated and sustainable community-focused interventions. Our focus is to help the Government of Bangladesh achieve the development goals and the targets of the UN Sustainable Development Goals (SDGs); and supporting Bangladesh’s graduation from the Least Developed Countries (LDCs) status through inclusive development.</p>
+                    <p>Our journey has been full of changes, development and opportunities. We have strengthened our institutional capacity with enhanced governance and risk management frameworks to ensure continuation of our existing compliance with regulatory authorities into the future. We look forward to contribute to the transformation of Bangladesh on its journey to become a developed society with improved communities and skilled human resources.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- about-us-section-end -->
 
 
 
